--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>StartSite Black HTML</title>
+    <title>index</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -14,14 +14,14 @@
 
 </head>
 
-<body class="front-page">
+<body>
 
     <!-- Меню -->
     <header class="header">
         <nav class="navbar navbar-expand-lg py-lg-4">
             <div class="container">
 
-                <a class="navbar-brand logo hover-opacity" href="/">
+                <a class="navbar-brand logo hover-opacity" href="index.html">
                     <img src="img/logo-black.svg" alt="">
                 </a>
 
@@ -73,17 +73,17 @@
                         <div class="swiper heroSwiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="#">
+                                    <a href="cases-item.html">
                                         <img class="w-100" src="img/hero-slider-01.png" alt="">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#">
+                                    <a href="cases-item.html">
                                         <img class="w-100" src="img/hero-slider-01.png" alt="">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#">
+                                    <a href="cases-item.html">
                                         <img class="w-100" src="img/hero-slider-01.png" alt="">
                                     </a>
                                 </div>
@@ -524,7 +524,7 @@
             <div class="row g-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a class="navbar-brand logo hover-opacity" href="/">
+                        <a class="navbar-brand logo hover-opacity" href="index.html">
                             <img src="img/logo-black.svg" alt="">
                         </a>
                     </div>
@@ -607,7 +607,7 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="#policy" target="_blank">политикой обработки
+                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="policy.html" target="_blank">политикой обработки
                                     персональных данных</a></label>
                         </div>
                         <div class="text-center mt-2 mt-md-3 mt-lg-4">
@@ -648,7 +648,7 @@
     <!-- Cookie alert box -->
     <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
         role="alert">
-        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="#policy" target="_blank">Подробнее</a> <button type="button"
+        <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
         </p>
