--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>policy</title>
+    <title>404</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -63,49 +63,15 @@
     <!-- Контент -->
     <main class="main">
 
-        <!-- breadcrumb -->
-        <section class="py-2">
-            <div class="container">
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Политика конфиденциальности</li>
-                    </ol>
-                </nav>
-            </div>
-        </section>
-
         <section class="section py-5">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Политика конфиденциальности</h1>
-                    <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
-                        персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
-                        Под
-                        персональными данными понимается любая информация, относящаяся к прямо или косвенно
-                        определённому или определяемому физическому лицу (гражданину).</p>
-                    <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
-                        рассылок.</p>
-                    <p>3. Основанием для обработки персональных данных являются: статья 24 Конституции РФ и статья 6
-                        Федерального закона № 152-ФЗ «О персональных данных» с дополнениями и изменениями.</p>
-                    <p>4. В ходе обработки с персональными данными будут совершены следующие операции: сбор, хранение,
-                        уточнение, передача, блокирование, удаление, уничтожение — все упомянутые действия только в
-                        целях, указанных в п. 2 настоящего Соглашения.</p>
-                    <p>5. Администрация обязуется не передавать полученную от Пользователя информацию третьим лицам. Не
-                        считается нарушением предоставление персональных данных третьим лицам, действующим на основании
-                        договора с Сайтом, для исполнения обязательств перед Пользователем и только в рамках настоящего
-                        Соглашения.</p>
-                    <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
-                        ликвидации Сайта.</p>
-                    <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
-                    <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
-                        согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
-                        информация не используется для установления личности Пользователя.</p>
-                    <p>9. Администрация при обработке персональных данных принимает необходимые и достаточные
-                        организационные и технические меры для защиты персональных данных от неправомерного доступа к
-                        ним, а также от иных неправомерных действий в отношении персональных данных.</p>
+                <div class="text-center" style="padding-top: 10rem; padding-bottom: 10rem">
+                    <div class="mb-5">
+                        <p class="fw-bold" style="font-size: 10rem;">404</p>
+                        <p>Страница, которую вы ищете, недоступна.</p>
+                    </div>
+                    <a class="btn btn-primary" href="index.html">На главную</a>
+                </div>
             </div>
         </section>
 
@@ -240,8 +206,7 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100"
-        role="alert">
+    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-130 w-100" role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button type="button"
                 class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-sm-0" data-bs-dismiss="alert" aria-label="Close"><span
                     aria-hidden="true">Ок</span></button>
