--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Политика конфиденциальности</li>
+                        <li class="breadcrumb-item active" aria-current="page">Контакты</li>
                     </ol>
                 </nav>
             </div>
