--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link active" href="#">Веб-студия</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Создание сайтов</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Кейсы</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
+                            <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                                     aria-current="page">Услуги</a>
@@ -50,8 +49,8 @@
                                     <li><a class="dropdown-item" href="#">Пункт 3</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#">Шаблоны</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
+                            <li class="nav-item"><a class="nav-link" href="shop.html">Шаблоны</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -246,22 +245,22 @@
                     <div class="swiper portfolioSwiper mt-5">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <a href="#">
+                                <a href="shop-item.html">
                                     <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="#">
+                                <a href="shop-item.html">
                                     <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="#">
+                                <a href="shop-item.html">
                                     <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
                                 </a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="#">
+                                <a href="shop-item.html">
                                     <img class="w-100 mx-auto" src="img/portfolio-01.png" alt="">
                                 </a>
                             </div>
@@ -532,12 +531,11 @@
                 <div class="col-lg-9 text-center text-lg-end">
                     <div class="d-none d-lg-block">
                         <ul class="nav justify-content-end">
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Создание сайтов</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Веб-студия</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Кейсы</a></li>
+                            <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
+                            <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
                             <li class="nav-item"><a href="#" class="nav-link px-2">Услуги</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Шаблоны</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link px-2">Контакты</a></li>
+                            <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
+                            <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
                         </ul>
                     </div>
                     <div class="mt-3">
