--- a/shop-item.html
+++ b/shop-item.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>policy</title>
+    <title>shop-item</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -38,7 +38,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -68,7 +68,8 @@
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Политика конфиденциальности</li>
+                        <li class="breadcrumb-item"><a href="shop.html">Шаблоны сайтов</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Дрова-шоп</li>
                     </ol>
                 </nav>
             </div>
@@ -76,35 +77,25 @@
 
         <section class="section py-5">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Политика конфиденциальности</h1>
-                    <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
-                        персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
-                        Под
-                        персональными данными понимается любая информация, относящаяся к прямо или косвенно
-                        определённому или определяемому физическому лицу (гражданину).</p>
-                    <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
-                        рассылок.</p>
-                    <p>3. Основанием для обработки персональных данных являются: статья 24 Конституции РФ и статья 6
-                        Федерального закона № 152-ФЗ «О персональных данных» с дополнениями и изменениями.</p>
-                    <p>4. В ходе обработки с персональными данными будут совершены следующие операции: сбор, хранение,
-                        уточнение, передача, блокирование, удаление, уничтожение — все упомянутые действия только в
-                        целях, указанных в п. 2 настоящего Соглашения.</p>
-                    <p>5. Администрация обязуется не передавать полученную от Пользователя информацию третьим лицам. Не
-                        считается нарушением предоставление персональных данных третьим лицам, действующим на основании
-                        договора с Сайтом, для исполнения обязательств перед Пользователем и только в рамках настоящего
-                        Соглашения.</p>
-                    <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
-                        ликвидации Сайта.</p>
-                    <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
-                    <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
-                        согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
-                        информация не используется для установления личности Пользователя.</p>
-                    <p>9. Администрация при обработке персональных данных принимает необходимые и достаточные
-                        организационные и технические меры для защиты персональных данных от неправомерного доступа к
-                        ним, а также от иных неправомерных действий в отношении персональных данных.</p>
+                <div class="row g-4 g-lg-0">
+                    <div class="col-lg-4 order-lg-2">
+                        <div class="dark-mode bg-color-black color-white h-100 px-2 px-lg-4 pt-lg-4">
+                            <h1 class="fw-bold mb-5">Дрова-шоп</h1>
+                            <p>Имеет поддержку для настольных компьютеров, планшетов и мобильных устройств.</p>
+                            <p><span class="color-blue">Выпущен</span>: Январь 2023</p>
+                            <p><span class="color-blue">Лицензия</span>: CC BY 3.0</p>
+                            <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
+                            <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
+                            <div class="d-none">
+                                <a class="btn btn-primary" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</a>
+                                <a class="btn btn-secondary" href="#">Демо</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 order-lg-1">
+                        <img class="w-100" src="img/case-about.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
