--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="about.html">Веб-студия</a></li>
                             <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -68,7 +68,7 @@
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Политика конфиденциальности</li>
+                        <li class="breadcrumb-item active" aria-current="page">Веб-студия</li>
                     </ol>
                 </nav>
             </div>
@@ -76,35 +76,7 @@
 
         <section class="section py-5">
             <div class="container">
-                <h1 class="text-uppercase fw-bold mb-5">Политика конфиденциальности</h1>
-                    <p>1. Принимая условия настоящего Соглашения, Пользователь даёт своё согласие Администрации сайта
-                        https://startsite.studio (далее — Администрация) на сбор, хранение и обработку своих
-                        персональных
-                        данных, указанных путём заполнения веб-форм на сайте https://startsite.studio (далее — Сайт).
-                        Под
-                        персональными данными понимается любая информация, относящаяся к прямо или косвенно
-                        определённому или определяемому физическому лицу (гражданину).</p>
-                    <p>2. Пользователь также даёт своё согласие Администрации на отправку маркетинговых и информационных
-                        рассылок.</p>
-                    <p>3. Основанием для обработки персональных данных являются: статья 24 Конституции РФ и статья 6
-                        Федерального закона № 152-ФЗ «О персональных данных» с дополнениями и изменениями.</p>
-                    <p>4. В ходе обработки с персональными данными будут совершены следующие операции: сбор, хранение,
-                        уточнение, передача, блокирование, удаление, уничтожение — все упомянутые действия только в
-                        целях, указанных в п. 2 настоящего Соглашения.</p>
-                    <p>5. Администрация обязуется не передавать полученную от Пользователя информацию третьим лицам. Не
-                        считается нарушением предоставление персональных данных третьим лицам, действующим на основании
-                        договора с Сайтом, для исполнения обязательств перед Пользователем и только в рамках настоящего
-                        Соглашения.</p>
-                    <p>6. Персональные данные хранятся и обрабатываются до завершения всех необходимых процедур либо до
-                        ликвидации Сайта.</p>
-                    <p>7. Согласие может быть отозвано Пользователем или его представителем путём направления
-                        письменного заявления на Сайт по электронному адресу support@startsite.studio</p>
-                    <p>8. Пользователь принимает политику использования файлов cookies, используемую на Сайте, и даёт
-                        согласие на получение информации об IP-адресе и иных сведений о его активности на Сайте. Данная
-                        информация не используется для установления личности Пользователя.</p>
-                    <p>9. Администрация при обработке персональных данных принимает необходимые и достаточные
-                        организационные и технические меры для защиты персональных данных от неправомерного доступа к
-                        ним, а также от иных неправомерных действий в отношении персональных данных.</p>
+                <h1 class="text-uppercase fw-bold mb-5">Веб-студия</h1>
             </div>
         </section>
 
