--- a/shop-item.html
+++ b/shop-item.html
@@ -81,8 +81,9 @@
                     <div class="col-lg-4 order-lg-2">
                         <div class="dark-mode bg-color-black color-white h-100 px-2 px-lg-4 pt-lg-4">
                             <h1 class="fw-bold mb-5">Дрова-шоп</h1>
-                            <p>Имеет поддержку для настольных компьютеров, планшетов и мобильных устройств.</p>
-                            <p><span class="color-blue">Выпущен</span>: Январь 2023</p>
+                            <p><span class="color-blue">Обновлён</span>: Январь 2023</p>
+                            <p><span class="color-blue">Опубликован</span>: Январь 2023</p>
+                            <p><span class="color-blue">Адаптивность</span>: Да</p>
                             <p><span class="color-blue">Лицензия</span>: CC BY 3.0</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
