--- a/shop-item.html
+++ b/shop-item.html
@@ -85,6 +85,7 @@
                             <p><span class="color-blue">Опубликован</span>: Январь 2023</p>
                             <p><span class="color-blue">Адаптивность</span>: Да</p>
                             <p><span class="color-blue">Лицензия</span>: CC BY 3.0</p>
+                            <p><span class="color-blue">Технологии</span>: React JS, HTML5, SASS, LESS, SCSS, Bootstrap 5</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
                             <div class="d-none">
