--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
 
         <!-- Выгодная разработка сайта в короткий срок -->
-        <section class="section py-5 dark-mode pt-7 pt-lg-5 bg-color-black color-white">
+        <section class="section py-5 pt-7 pt-lg-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-lg-6">
@@ -132,7 +132,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
                                                     900₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -149,7 +149,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Корпоративный</span> от 75
                                                     900₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -165,7 +165,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
                                                     000₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -182,7 +182,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Сайт-визитка</span> от 35
                                                     900₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -199,7 +199,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Корпоративный</span> от 75
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Корпоративный</span> от 75
                                                     900₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -215,7 +215,7 @@
                                     <article class="card card-hover-dark h-100 border-0">
                                         <div class="card-body">
                                             <p class="h3">
-                                                <a href="#" class="stretched-link"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
+                                                <a href="#" class="stretched-link text-decoration-none"><span class="d-block d-lg-inline">Интернет-магазин</span> от 120
                                                     000₽</a>
                                             </p>
                                             <div class="fw-light">
@@ -269,7 +269,7 @@
                 </div>
                 <div class="row justify-content-center mt-5">
                     <div class="col text-center">
-                        <a class="fz-12 fw-bold" href="#">Посмотреть более 2200 шаблонов</a>
+                        <a class="link-blue text-decoration-none fz-12 fw-bold" href="#">Посмотреть более 2200 шаблонов</a>
                     </div>
                 </div>
             </div>
@@ -387,18 +387,26 @@
 
         <!-- Как изменились наши клиенты -->
         <section class="section py-5 dark-mode bg-color-black color-white">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col text-center">
                         <h2 class="h1">Как <span class="color-blue">изменились</span> наши клиенты</h2>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center mt-5">
+                <div class="row mt-5 pt-4 pb-2 justify-content-between">
+                    <div class="col-6 text-center">
+                        <p class="fz-2">До</p>
+                    </div>
+                    <div class="col-6 text-center">
+                        <p class="fz-2">После</p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
                     <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
                     <img-comparison-slider class="mx-n5 mx-xl-0">
-                        <img slot="first" src="img/before-01.webp" alt="Before Mode">
-                        <img slot="second" src="img/after-01.webp" alt="After Mode">
-                        <div slot="handle" style="width: 64px; height: 64px;">
+                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
+                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
+                        <div slot="handle" class="img-comparison-slider--handle">
                             <img src="img/handle.svg" alt="">
                         </div>
                     </img-comparison-slider>
@@ -446,7 +454,7 @@
                                 </div>
                                 <div id="q1" class="accordion-collapse collapse show" aria-labelledby="faq-heading-1" data-bs-parent="#faq">
                                     <div class="accordion-body fw-light pt-0">
-                                        <p>Часто компании малого и среднего бизнеса, которые только начинают свой путь на рынке,
+                                        <p><a href="#">Часто компании малого</a> и среднего бизнеса, которые только начинают свой путь на рынке,
                                             ищут услугу изготовления сайта «под ключ». Наша веб студия «StartSite» занимается
                                             разработкой интернет-ресурсов, а также наполнением всеми необходимыми материалами.
                                             Сделаем вашу кампанию узнаваемой в интернете. Вы сможете легко дать рекламу вашей
@@ -518,13 +526,13 @@
 
     <!-- Футер -->
     <div class="footer-border"></div>
-    <footer class="footer py-4">
+    <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
             <div class="row g-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
-                            <img src="img/logo-black.svg" alt="">
+                            <img src="img/logo-white.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -539,12 +547,11 @@
                         </ul>
                     </div>
                     <div class="mt-3">
-                        <a class="text-uppercase" href="#mainForm" data-bs-toggle="modal"
-                            data-bs-target="#mainForm">Закажите создание и продвижение сайта</a>
+                        <p class="text-uppercase color-blue"><span class="d-block d-lg-inline">Закажите создание</span> и продвижение сайта</p>
                     </div>
                 </div>
             </div>
-            <div class="row py-3 py-lg-5">
+            <div class="row py-3 py-lg-3">
                 <div class="col">
                     <ul class="nav justify-content-center justify-content-lg-end">
                         <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
@@ -554,8 +561,8 @@
             </div>
             <div class="row g-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
-                    <p><a href="mailto:support@startsite.studio">support@startsite.studio</a></p>
-                    <p><a href="tel:+74951595901">+7 (495) 159-59-01</a></p>
+                    <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
+                    <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-start order-lg-1">
                     <p>© Startsite
@@ -605,10 +612,10 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="policy.html" target="_blank">политикой обработки
+                            <label class="form-check-label small color-grey" for="ex-check-2">Я согласен(а) с <a class="link-grey" href="policy.html" target="_blank">политикой обработки
                                     персональных данных</a></label>
                         </div>
-                        <div class="text-center mt-2 mt-md-3 mt-lg-4">
+                        <div class="text-center mt-4">
                             <!-- ......................................................................... -->
                             <!-- .............................. ВНИМАНИЕ!!! .............................. -->
                             <!-- У кнопки type="button" ТОЛЬКО ДЛЯ ДЕМОНСТРАЦИИ открытия окна "Спасибо"!!! -->
