--- a/shop-item.html
+++ b/shop-item.html
@@ -103,13 +103,13 @@
 
     <!-- Футер -->
     <div class="footer-border"></div>
-    <footer class="footer py-4">
+    <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
             <div class="row g-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
-                            <img src="img/logo-black.svg" alt="">
+                            <img src="img/logo-white.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -124,12 +124,11 @@
                         </ul>
                     </div>
                     <div class="mt-3">
-                        <a class="text-uppercase" href="#mainForm" data-bs-toggle="modal"
-                            data-bs-target="#mainForm">Закажите создание и продвижение сайта</a>
+                        <p class="text-uppercase color-blue"><span class="d-block d-lg-inline">Закажите создание</span> и продвижение сайта</p>
                     </div>
                 </div>
             </div>
-            <div class="row py-3 py-lg-5">
+            <div class="row py-3 py-lg-3">
                 <div class="col">
                     <ul class="nav justify-content-center justify-content-lg-end">
                         <li class="ms-3"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
@@ -139,8 +138,8 @@
             </div>
             <div class="row g-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
-                    <p><a href="mailto:support@startsite.studio">support@startsite.studio</a></p>
-                    <p><a href="tel:+74951595901">+7 (495) 159-59-01</a></p>
+                    <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
+                    <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-start order-lg-1">
                     <p>© Startsite
@@ -190,10 +189,10 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="ex-check-2" checked>
-                            <label class="form-check-label small" for="ex-check-2">Я согласен(а) с <a href="policy.html" target="_blank">политикой обработки
+                            <label class="form-check-label small color-grey" for="ex-check-2">Я согласен(а) с <a class="link-grey" href="policy.html" target="_blank">политикой обработки
                                     персональных данных</a></label>
                         </div>
-                        <div class="text-center mt-2 mt-md-3 mt-lg-4">
+                        <div class="text-center mt-4">
                             <!-- ......................................................................... -->
                             <!-- .............................. ВНИМАНИЕ!!! .............................. -->
                             <!-- У кнопки type="button" ТОЛЬКО ДЛЯ ДЕМОНСТРАЦИИ открытия окна "Спасибо"!!! -->
